[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
itertools = "=0.11.0"
proconio = { version = "=0.3.6", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
svg = "0.14.0"
delaunator = "1.0.1"
web-sys = {"version" = "0.3.44", features=['console']}

anyhow = "1.0.75"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
getrandom = { version = "0.2.7", features = ["js"] }
console_error_panic_hook = "0.1.7"
once_cell = "1.19.0"